--- a/demoHTML.html
+++ b/demoHTML.html
@@ -2,9 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Demo</title>
 </head>
 <body>
-
+<i>Đây là thẻ i</i><br>
+<u>Đây là thẻ u</u><br>
+<strong>Đây là thẻ strong</strong><br>
+<p>Dưới đây là thẻ video</p><br>
+<video controls height=" 50%" width="50%"
+       src="pic/demovid.mp4"></video>
+<a href="http://w3c.org" target="_blank">đây là link khi click vào chuyển sang tab mới</a>
 </body>
 </html>
